This file lists big/noteworthy changes, only...

Version 0.9 (upcoming)
...

Version 0.8
buildsys:
  o big simplification make-based build system, no more distinct GNU and BSD makefiles anymore
  o new, much simpler ./configure for new make-based build-system
  o support for in-source and out-of-source builds for make-based build systems
  o made configure.bat guess x64 as target arch for x64 windows hosts
  o based more sources on portasm generation
dyncall:
  o fix for ARMv7 Thumb-2 code (tested on iPhone 4 CDMA / iOS 6.0.1)
  o bugfixes for -O2 builds for SPARC-v9 and SPARC-v7 
  o new optimized call kernel for SPARC-v9 without conditionals
  o bigger refactoring and optimization of mips o32
  o x64 optimizations
dyncallback:
  o added callback support for plan9
  o big cleanup, removal of duplicate files after introduction of portasm
  o include path fixes for public facing APIs (removed relative paths)
doc:
  o cleanup of manual and corrections
  o added info about newly supported and/or tested platforms (e.g. FreeBSD on ARM)
  o restructured folder layout for documentation
  o added API doc for dyncallback and dynload
  o added manpages for dyncallback and dynload
tests:
  o added arm/thumb interwork test suite
bindings:
  o godc: added bindings for Go
  o rbdc: fixed and extended ruby bindings
  o shdc: renamed shell binding to shdc and added feature to list shared-objects' symbols

Version 0.7
architecture:
  o added subproject: portasm - portable (GNU AS,+Apple and MASM) assembly framework  
  o added subproject: autovar - predefined macro framework (was dyncall_macros.h)
  o added support for sparc (32-bit) (tested on linux/debian,openbsd,solaris)
  o added support for sparc (64-bit) (tested on linux/debian,openbsd,solaris)
  o added support for Solaris and SunPro compiler for i386, x86_64, sparc and sparc64
  o improved auto-detection via preprocessor defines
dyncall updates: